--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.4",
     "cloudinary": "^2.9.0",
     "cors": "^2.8.5",
     "datauri": "^4.1.0",
